--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    
+     <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    
+    <!-- Bootsrap JS -->
+    <script src="./src//assets//js/bootstrap.js"></script>
   </body>
 </html>
