--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/images/Netflix_FavIcon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/images/Netflix_FavIcon.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netflix Clone</title>
   </head>
@@ -10,11 +14,11 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 
-    
-     <!-- jQuery -->
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- Bootsrap JS -->
-    <script src="./src//assets//js/bootstrap.js"></script>
+    <script src="./src/assets/js/bootstrap.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
   </body>
 </html>
