--- a/index.html
+++ b/index.html
@@ -17,19 +17,10 @@
     <!-- jQuery -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
 
-    <!-- Bootstrap CSS -->
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      /> -->
-
-    <!-- Bootstrap JS -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
-
     <!-- jQuery -->
-    <script src="/src/assets/js/jquery-3.7.1.js"></script>
+    <!-- <script src="/src/assets/js/jquery-3.7.1.js"></script> -->
     <!-- Bootsrap JS -->
-    <script src="/src/assets/js/bootstrap.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
+    <!-- <script src="/src/assets/js/bootstrap.js"></script> -->
+
   </body>
 </html>
